Refactor | CAKK-54 |  케이크 하트 기능 리팩토링
* Refactor | CAKK-54 | 도메인을 활용한 리팩토링

* Refactor | CAKK-54 | 애플리케이션 비즈니스 리팩토링

* Test | CAKK-54 | 하트 취소 관련 TC 추가 작성

* Refactor | CAKK-54 | fetch join을 활용한 리팩토

* Refactor | CAKK-54 | fetch join을 활용한 리팩토링

* Refactor | CAKK-54 | 미사용 메서드 제거

* Test | CAKK-54 | 테스트 코드 수정

* Refactor | CAKK-54 | 코드 리뷰 반영

* Test | CAKK-54 | Test 관련 Sql 스크립트 수정